@@ -1,5 +1,7 @@
 2001-08-11  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* objs/chunks.cc (Map_chunk): Fixed yet-another world-wrap crash.
+
 	* effects.cc,intrinsics.cc:  Added intrinsic npc_sprite_effect()
 	for BG.
 
